--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="container">
 <div id="logo">
-<img src="images/logo.png" width="250" height="20" alt="Logo Tangkascom" /></div>
+<img src="bolatangkasnet.github.io/images/logo.png" width="250" height="20" alt="Logo Tangkascom" /></div>
 <div id="nav">
 	<ul>
 		<li id="home" class="current"><a href="/" name="Home" title="Tangkascom.net">Home</a></li>
