--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 <div id="feature">
 	<h1>FITUR</h1>
 	<div id="feature_inside">
-		<div class="feature_info"><img src="images/fitur/setting.jpg" width="155" height="120" alt="Tangkascom Setting" /><h3>SETTING</h3><p>Pilihan untuk menemani anda dalam bermain sesuai keinginan anda.</p></div>
-		<div class="feature_info"><img src="images/fitur/transfer.jpg" width="155" height="120" alt="Transfer Credit Bolatangkas" /><h3>TRANSFER TEMAN</h3><p>Dengan sekuritas transfer antar teman menjadi aman.</p></div>
-		<div class="feature_info"><img src="images/fitur/game_histori.jpg" width="155" height="120" alt="Histori Kartu" /><h3>HISTORI</h3><p>Tunjukkan barang ROYAL anda kepada teman anda.</p></div>
-		<div class="feature_info"><img src="images/fitur/poin.jpg" width="155" height="120" alt="Tangkascom Poin" /><h3>TANGKASCOM POIN</h3><p>Setiap 100 poin angka dapat ditukar dengan credit.</p></div>
-		<div class="feature_info"><img src="images/fitur/bonus.jpg" width="155" height="120" alt="Bonus Tangkascom" /><h3>TUKAR POIN</h3><p>Layar tukar poin, klik transfer dan poin anda menjadi credit.</p></div>
+		<div class="feature_info"><img src="images/setting.jpg" width="155" height="120" alt="Tangkascom Setting" /><h3>SETTING</h3><p>Pilihan untuk menemani anda dalam bermain sesuai keinginan anda.</p></div>
+		<div class="feature_info"><img src="images/transfer.jpg" width="155" height="120" alt="Transfer Credit Bolatangkas" /><h3>TRANSFER TEMAN</h3><p>Dengan sekuritas transfer antar teman menjadi aman.</p></div>
+		<div class="feature_info"><img src="images/game_histori.jpg" width="155" height="120" alt="Histori Kartu" /><h3>HISTORI</h3><p>Tunjukkan barang ROYAL anda kepada teman anda.</p></div>
+		<div class="feature_info"><img src="images/poin.jpg" width="155" height="120" alt="Tangkascom Poin" /><h3>TANGKASCOM POIN</h3><p>Setiap 100 poin angka dapat ditukar dengan credit.</p></div>
+		<div class="feature_info"><img src="images/bonus.jpg" width="155" height="120" alt="Bonus Tangkascom" /><h3>TUKAR POIN</h3><p>Layar tukar poin, klik transfer dan poin anda menjadi credit.</p></div>
 	</div>
 	<div class="clearfix"></div>
 </div>
