--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <title>Bola Tangkas Online : Tangkascom .net</title><link rel="canonical" href="http://tangkascom.cc/" />
 
+<link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/home.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
+<link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
