--- a/Bantuan.html
+++ b/Bantuan.html
@@ -8,7 +8,7 @@
 <link href="./Bantuan_files/styles.css" rel="stylesheet" type="text/css"><link href="./Bantuan_files/base.css" rel="stylesheet" type="text/css"><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
-<title>Bola Tangkas Online : Tangkascom .net</title><link rel="canonical" href="http://tangkascom.cc/bantuan">
+<title>Bola Tangkas Online : Tangkascom .net</title><link rel="canonical" href="https://bolatangkasnet.github.io/bantuan">
 <script type="text/javascript" async="" src="./Bantuan_files/linkid.js.download"></script><script type="text/javascript" async="" src="./Bantuan_files/dc.js.download"></script><script async="" src="./Bantuan_files/analytics.js.download"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
