--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<ul>
 		<li><a href="/">Home</a></li>
 		<li><a href="/promosi">Promosi</a></li>
-		<li><a href="/bantuan">Bantuan</a></li>
+		<li><a href="/Bantuan">Bantuan</a></li>
 		<li>Tangkascom (C) 2010 - 2018</li>
 	</ul>
 </div>
