--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="nav">
 	<ul>
 		<li id="home" class="current"><a href="/" name="Home" title="Tangkascom.net">Home</a></li>
-		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar Tangkascom">Bantuan</a></li>
+		<li id="cara" class=""><a href="/Bantuan.html" name="Cara" title="Cara Daftar Tangkascom">Bantuan</a></li>
 		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi Tangkascom">Promosi</a></li>
 	</ul>
 <div class="clearfix"></div>
