--- a/Bantuan.html
+++ b/Bantuan.html
@@ -27,7 +27,7 @@
 <img src="./Bantuan_files/logo.png" width="250" height="20" alt="Logo Tangkascom"></div>
 <div id="nav">
 	<ul>
-		<li id="home" class=""><a href="http://tangkascom.cc/" name="Home" title="Tangkascom.net">Home</a></li>
+		<li id="home" class=""><a href="https://bolatangkasnet.github.io/" name="Home" title="Tangkascom.net">Home</a></li>
 		<li id="cara" class="current"><a href="http://tangkascom.cc/bantuan" name="Cara" title="Cara Daftar Tangkascom">Bantuan</a></li>
 		<li id="promosi" class=""><a href="http://tangkascom.cc/promosi" name="Promosi" title="Promosi Tangkascom">Promosi</a></li>
 	</ul>
