--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bola Tangkas Online Meja Darat" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<title>Bola Tangkas Online : Tangkascom .net</title><link rel="canonical" href="http://tangkascom.cc/" />
+<title>Bola Tangkas Online : Tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io" />
 
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/home.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
