--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -7,7 +7,7 @@
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/base.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
-<title>Bola Tangkas Online : Tangkascom .net</title><link rel="canonical" href="http://tangkascom.cc/bantuan" />
+<title>Bola Tangkas Online : Tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io/bantuan" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
