--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -48,7 +48,7 @@
 				<h1>Bantuan</h1>
 				<p>Bantuan untuk bermain di Tangkascom</p>
 				<ul>
-					<li>Download game <a href="/download/tangkascom_1.7.8.exe">Tangkascom</a>.</li>
+					<li>Download game <a href="http://tangkas.download/tangkascom_1.7.8.exe">Tangkascom</a>.</li>
 					<li>Install game.</li>
 					<li>Daftar langsung di aplikasi. Baca <a href="/bantuan/daftar">cara daftar</a> untuk lebih lengkap.</li>
 					<li>Hubungi agen anda untuk mengetahui kode sponsor.</li>
