--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -50,7 +50,7 @@
 				<ul>
 					<li>Download game <a href="http://tangkas.download/tangkascom_1.7.8.exe">Tangkascom</a>.</li>
 					<li>Install game.</li>
-					<li>Daftar langsung di aplikasi. Baca <a href="/bantuan/daftar">cara daftar</a> untuk lebih lengkap.</li>
+					<li>Daftar langsung di aplikasi.</li>
 					<li>Hubungi agen anda untuk mengetahui kode sponsor.</li>
 					<li>Perhatikan no. rekening dan nama rekening harus sesuai saat daftar.</li>
 					<li>Login, pilih tipe meja dan selamat bermain.</li>
