--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bola Tangkas Online Meja Darat" />
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <title>Bola Tangkas Online : Tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io" />
 
@@ -20,12 +20,12 @@
 
 <div id="container">
 <div id="logo">
-<img src="/images/logo.png" width="250" height="20" alt="Logo Tangkascom" /></div>
+<img src="/images/logo.png" width="250" height="20" alt="Logo tangkasnet" /></div>
 <div id="nav">
 	<ul>
-		<li id="home" class="current"><a href="/" name="Home" title="Tangkascom.net">Home</a></li>
-		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar Tangkascom">Bantuan</a></li>
-		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi Tangkascom">Promosi</a></li>
+		<li id="home" class="current"><a href="/" name="Home" title="tangkasnet.net">Home</a></li>
+		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
+		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
 	</ul>
 <div class="clearfix"></div>
 </div>
@@ -36,7 +36,7 @@
 		<div id="info_promo">
 			<h1 class="title">MENGHADIRKAN INFINITI <span>&infin;</span> CREDIT</h1>
 			<h2>Dapat Poin Rebut Credit</h2>
-			<p>Setiap 100 Poin yang didapatkan dari bola tangkas tangkascom, dapat ditukar credit sesuai dengan tipe meja.</p>
+			<p>Setiap 100 Poin yang didapatkan dari bola tangkas tangkasnet, dapat ditukar credit sesuai dengan tipe meja.</p>
 			<p>Baca info lebih lanjut klik <a href="/promosi/infinitipoin">disini</a>.</p>
 			<p>Segera daftarkan diri anda atau baca <a href="/bantuan">cara bergabung</a></p>
 		</div>
@@ -44,7 +44,7 @@
 	<div class="info_home">
 		<div id="info_download">
 			<h1>DOWNLOAD SOFTWARE TANGKASNET ONLINE TERBARU</h1>
-			<center><a href="http://tangkas.download/tangkascom_1.7.8.exe" title="Bola Tangkas" id="bola_tangkas"><span>5MB KLIK DISINI</span></a>			<em>Versi 1.7.8 - 18 Desember 2018</em>
+			<center><a href="http://tangkas.download/tangkasnet_1.7.8.exe" title="Bola Tangkas" id="bola_tangkas"><span>5MB KLIK DISINI</span></a>			<em>Versi 1.7.8 - 18 Desember 2018</em>
 			</center>
 		</div>
 	</div>
@@ -53,11 +53,11 @@
 <div id="feature">
 	<h1>FITUR</h1>
 	<div id="feature_inside">
-		<div class="feature_info"><img src="images/setting.jpg" width="155" height="120" alt="Tangkascom Setting" /><h3>SETTING</h3><p>Pilihan untuk menemani anda dalam bermain sesuai keinginan anda.</p></div>
+		<div class="feature_info"><img src="images/setting.jpg" width="155" height="120" alt="tangkasnet Setting" /><h3>SETTING</h3><p>Pilihan untuk menemani anda dalam bermain sesuai keinginan anda.</p></div>
 		<div class="feature_info"><img src="images/transfer.jpg" width="155" height="120" alt="Transfer Credit Bolatangkas" /><h3>TRANSFER TEMAN</h3><p>Dengan sekuritas transfer antar teman menjadi aman.</p></div>
 		<div class="feature_info"><img src="images/game_histori.jpg" width="155" height="120" alt="Histori Kartu" /><h3>HISTORI</h3><p>Tunjukkan barang ROYAL anda kepada teman anda.</p></div>
-		<div class="feature_info"><img src="images/poin.jpg" width="155" height="120" alt="Tangkascom Poin" /><h3>TANGKASCOM POIN</h3><p>Setiap 100 poin angka dapat ditukar dengan credit.</p></div>
-		<div class="feature_info"><img src="images/bonus.jpg" width="155" height="120" alt="Bonus Tangkascom" /><h3>TUKAR POIN</h3><p>Layar tukar poin, klik transfer dan poin anda menjadi credit.</p></div>
+		<div class="feature_info"><img src="images/poin.jpg" width="155" height="120" alt="tangkasnet Poin" /><h3>TANGKASNET POIN</h3><p>Setiap 100 poin angka dapat ditukar dengan credit.</p></div>
+		<div class="feature_info"><img src="images/bonus.jpg" width="155" height="120" alt="Bonus tangkasnet" /><h3>TUKAR POIN</h3><p>Layar tukar poin, klik transfer dan poin anda menjadi credit.</p></div>
 	</div>
 	<div class="clearfix"></div>
 </div>
@@ -67,7 +67,7 @@
 		<li><a href="/">Home</a></li>
 		<li><a href="/promosi">Promosi</a></li>
 		<li><a href="/Bantuan.html">Bantuan</a></li>
-		<li>Tangkascom (C) 2010 - 2018</li>
+		<li>tangkasnet (C) 2010 - 2018</li>
 	</ul>
 </div>
 </div>
@@ -75,7 +75,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-16387091-2']);
-  _gaq.push(['_setDomainName', '.tangkascom.net']);
+  _gaq.push(['_setDomainName', '.tangkasnet.net']);
   _gaq.push(['_trackPageview']);
 
   (function() {
