--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bola Tangkas Online Meja Darat" />
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
 
@@ -23,12 +23,12 @@
 
 <div id="container">
 <div id="logo">
-<img src="images/logo.png" width="250" height="20" alt="Logo Tangkascom" /></div>
+<img src="images/logo.png" width="250" height="20" alt="Logo tangkasnet" /></div>
 <div id="nav">
 	<ul>
-		<li id="home" class=""><a href="/" name="Home" title="Tangkascom.net">Home</a></li>
-		<li id="cara" class="current"><a href="/bantuan" name="Cara" title="Cara Daftar Tangkascom">Bantuan</a></li>
-		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi Tangkascom">Promosi</a></li>
+		<li id="home" class=""><a href="/" name="Home" title="Tangkasnet">Home</a></li>
+		<li id="cara" class="current"><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
+		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
 	</ul>
 <div class="clearfix"></div>
 </div>
@@ -46,9 +46,9 @@
 		<div id="content">
 						<div id="sub_content">
 				<h1>Bantuan</h1>
-				<p>Bantuan untuk bermain di Tangkascom</p>
+				<p>Bantuan untuk bermain di Tangkasnet</p>
 				<ul>
-					<li>Download game <a href="http://tangkas.download/tangkascom_1.7.8.exe">Tangkascom</a>.</li>
+					<li>Download game <a href="http://tangkas.download/tangkasnet_1.7.8.exe">tangkasnet</a>.</li>
 					<li>Install game.</li>
 					<li>Daftar langsung di aplikasi.</li>
 					<li>Hubungi agen anda untuk mengetahui kode sponsor.</li>
@@ -71,7 +71,7 @@
 		<li><a href="/">Home</a></li>
 		<li><a href="/promosi">Promosi</a></li>
 		<li><a href="/bantuan">Bantuan</a></li>
-		<li>Tangkascom (C) 2010 - 2018</li>
+		<li>tangkasnet (C) 2010 - 2018</li>
 	</ul>
 </div>
 </div>
@@ -79,7 +79,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-16387091-2']);
-  _gaq.push(['_setDomainName', '.tangkascom.net']);
+  _gaq.push(['_setDomainName', '.tangkasnet.net']);
   _gaq.push(['_trackPageview']);
 
   (function() {
