--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -7,6 +7,24 @@
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/base.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
+
+<!-- Start of LiveChat (www.livechatinc.com) code -->
+<script type="text/javascript">
+window.__lc = window.__lc || {};
+window.__lc.license = 4987581;
+(function() {
+  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+})();
+</script>
+<noscript>
+<a href="https://www.livechatinc.com/chat-with/4987581/">Chat with us</a>,
+powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target="_blank">LiveChat</a>
+</noscript>
+<!-- End of LiveChat code -->
+
+
 <title>Bola Tangkas Online : Tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io/bantuan" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -48,7 +66,7 @@
 				<h1>Bantuan</h1>
 				<p>Bantuan untuk bermain di Tangkasnet</p>
 				<ul>
-					<li>Download game <a href="http://tangkas.download/tangkasnet_1.7.8.exe">tangkasnet</a>.</li>
+					<li>Download game <a href="/download/tangkasnet_1.7.8.exe">tangkasnet</a>.</li>
 					<li>Install game.</li>
 					<li>Daftar langsung di aplikasi.</li>
 					<li>Hubungi agen anda untuk mengetahui kode sponsor.</li>
