--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/home.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
+<!-- Start of LiveChat (www.livechatinc.com) code -->
+<script type="text/javascript">
+window.__lc = window.__lc || {};
+window.__lc.license = 4987581;
+(function() {
+  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+})();
+</script>
+<noscript>
+<a href="https://www.livechatinc.com/chat-with/4987581/">Chat with us</a>,
+powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target="_blank">LiveChat</a>
+</noscript>
+<!-- End of LiveChat code -->
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -44,7 +60,7 @@
 	<div class="info_home">
 		<div id="info_download">
 			<h1>DOWNLOAD SOFTWARE TANGKASNET ONLINE TERBARU</h1>
-			<center><a href="http://tangkas.download/tangkasnet_1.7.8.exe" title="Bola Tangkas" id="bola_tangkas"><span>5MB KLIK DISINI</span></a>			<em>Versi 1.7.8 - 18 Desember 2018</em>
+			<center><a href="/download/tangkasnet_1.7.8.exe" title="Bola Tangkas" id="bola_tangkas"><span>5MB KLIK DISINI</span></a>			<em>Versi 1.7.8 - 18 Desember 2018</em>
 			</center>
 		</div>
 	</div>
