--- a/promosi/index.html
+++ b/promosi/index.html
@@ -2,6 +2,21 @@
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
+<!-- Start of LiveChat (www.livechatinc.com) code -->
+<script type="text/javascript">
+window.__lc = window.__lc || {};
+window.__lc.license = 4987581;
+(function() {
+  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+})();
+</script>
+<noscript>
+<a href="https://www.livechatinc.com/chat-with/4987581/">Chat with us</a>,
+powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target="_blank">LiveChat</a>
+</noscript>
+<!-- End of LiveChat code -->
 
 
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/base.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
