--- a/index.html
+++ b/index.html
@@ -5,21 +5,7 @@
 <link  href="/css/styles.css" rel="stylesheet" type="text/css" /><link  href="/css/home.css" rel="stylesheet" type="text/css" /><!--[if lte IE 6]>
 <link  href="/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
-<!-- Start of LiveChat (www.livechatinc.com) code -->
-<script type="text/javascript">
-window.__lc = window.__lc || {};
-window.__lc.license = 4987581;
-(function() {
-  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
-  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
-})();
-</script>
-<noscript>
-<a href="https://www.livechatinc.com/chat-with/4987581/">Chat with us</a>,
-powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target="_blank">LiveChat</a>
-</noscript>
-<!-- End of LiveChat code -->
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -82,7 +68,7 @@ powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target=
 	<ul>
 		<li><a href="/">Home</a></li>
 		<li><a href="/promosi">Promosi</a></li>
-		<li><a href="/Bantuan.html">Bantuan</a></li>
+		<li><a href="/bantuan">Bantuan</a></li>
 		<li>tangkasnet (C) 2010 - 2018</li>
 	</ul>
 </div>
@@ -101,3 +87,19 @@ powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target=
   })();
 
 </script>
+<!-- Start of LiveChat (www.livechatinc.com) code -->
+<script type="text/javascript">
+window.__lc = window.__lc || {};
+window.__lc.license = 4987581;
+(function() {
+  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+})();
+</script>
+<noscript>
+<a href="https://www.livechatinc.com/chat-with/4987581/">Chat with us</a>,
+powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener" target="_blank">LiveChat</a>
+</noscript>
+<!-- End of LiveChat code -->
+</body></html>
