--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -25,7 +25,7 @@
 
 <div id="container">
 <div id="logo">
-<img src="images/logo.png" width="250" height="20" alt="Logo tangkasnet" /></div>
+<a href="/"><img src="/images/logo.png" width="250" height="20" alt="Logo tangkasnet" /></div>
 <div id="nav">
 	<ul>
 		<li id="home" class=""><a href="/" name="Home" title="Tangkasnet">Home</a></li>
