--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -50,7 +50,7 @@
 				<h1>Bantuan</h1>
 				<p>Bantuan untuk bermain di Tangkasnet</p>
 				<ul>
-					<li>Download game <a href="/download/tangkasnet_1.7.8.exe">tangkasnet</a>.</li>
+					<li>Download game <a href="/download/tangkascom_1.7.8.exe">tangkasnet</a>.</li>
 					<li>Install game.</li>
 					<li>Daftar langsung di aplikasi.</li>
 					<li>Hubungi agen anda untuk mengetahui kode sponsor.</li>
