--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div class="info_home">
 		<div id="info_download">
 			<h1>DOWNLOAD SOFTWARE TANGKASNET ONLINE TERBARU</h1>
-			<center><a href="/download/tangkasnet_1.7.8.exe" title="Bola Tangkas" id="bola_tangkas"><span>5MB KLIK DISINI</span></a>			<em>Versi 1.7.8 - 18 Desember 2018</em>
+			<center><a href="/download/tangkascom_1.7.8.exe" title="Bola Tangkas" id="bola_tangkas"><span>5MB KLIK DISINI</span></a>			<em>Versi 1.7.8 - 18 Desember 2018</em>
 			</center>
 		</div>
 	</div>
