--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -44,6 +44,14 @@
 				<li class="current"><a href="/bantuan">Tangkasgold</a></li>
 				<li class="current"><a href="/bantuan">Tangkasroyal</a></li>
 				<li class="current"><a href="/bantuan">Tangkas88</a></li>
+				<li class="current"><a href="/bantuan">Tangkas365</a></li>
+				<li class="current"><a href="/bantuan">Tangkaspro</a></li>
+				<li class="current"><a href="/bantuan">Tangkascom</a></li>
+				<li class="current"><a href="/bantuan">Tangkas7</a></li>
+				<li class="current"><a href="/bantuan">Bola Tangkas</a></li>
+				<li class="current"><a href="/bantuan">Dewa Tangkas</a></li>
+				<li class="current"><a href="/bantuan">Naga Tangkas</a></li>
+				<li class="current"><a href="/bantuan">Agen Tangkas</a></li>
 				
 			</ul>
 		</div>
