--- a/bantuan/index.html
+++ b/bantuan/index.html
@@ -40,7 +40,7 @@
 		<div id="sidebar">
 			<ul>
 				<li class="current"><a href="/bantuan">Bantuan Bermain</a></li>
-				<li class="current"><a href="/bantuan">Tangkasnet</a></li>
+				<li class="current"><a href="/tangkasnet">Tangkasnet</a></li>
 				<li class="current"><a href="/bantuan">Tangkasgold</a></li>
 				<li class="current"><a href="/bantuan">Tangkasroyal</a></li>
 				<li class="current"><a href="/bantuan">Tangkas88</a></li>
