--- a/tangkasnet/index.html
+++ b/tangkasnet/index.html
@@ -60,18 +60,12 @@
 	<div id="content_box">
 		<div id="content">
 						<div id="sub_content">
-				<h1>Bantuan</h1>
-				<p>Bantuan untuk bermain di Tangkasnet</p>
+				
+				<p>Rasakan serunya bermain di Tangkasnet</p>
 				<ul>
 					<li>Tangkasnet adalah salah satu dari permainan game bola tangkas yang sangat terkenal pada tahun 1980an dikalangan para pemain judi dan penggemar bola tangkas. Pada waktu itu permainan ini sangat ramai dibicarakan oleh para pemain judi dan menjadi sangat populer karena para pemain judi berasa bahwa game bola tangkas ini sangat menarik untuk dimainkan karena dibutuhkan keahlian dan ketelitian dalam memainkan game bola tangkas ini yaitu dalam hal menghafalkan pola permainan game bola tangkas ini seperti memperhatikan step 1 sampai step 3.
 
 					Pada tahun 1995 , pemerintah melarang game bola tangkas ini untuk dipermainkan oleh para pemain judi. Sehingga bola tangkas online tangkasnet menjadi sulit untuk dimainkan oleh para pemain judi. Dengan kemajuan teknologi yang kita miliki sekarang , para pemain judi dan penggemar bola tangkas tidak perlu lagi mencari kasino atau tempat khusus untuk memainkan game bola tangkas ini. Permainan game bola tangkas sekarang dapat dimainkan secara online menggunakan internet melalui komputer atau handphone. Jika bermain di komputer kita harus download terlebih dahulu game bola tangkas online yang berupa aplikasi desktop dan ada juga yang bisa dimainkan secara langsung di browser komputer kita atau lebih dikenal dengan istilah web-based.</li>
-				</ul>
-				<h1>Info Penarikan</h1>
-				<p>Perhatikan pada layar histori transaksi anda.</p>
-				<ul>
-				<li>Jika bagian status <span style="color:red">penarikan</span> berwarna <span style="color:red">Merah</span> = penarikan sedang dalam proses</li>
-				<li>Jika bagian status <span style="color:blue">penarikan</span> berwarna <span style="color:blue">Biru</span> = penarikan telah ditransfer ke rekening anda</li>
 				</ul>
 			</div>
 					</div>
