--- a/tangkas/tangkasnet/index.html
+++ b/tangkas/tangkasnet/index.html
@@ -32,7 +32,7 @@
 		<li id="home" class=""><a href="/" name="Home" title="Tangkasnet">Home</a></li>
 		<li id="cara" class="current"><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
 		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
-		<li id="tangkas" class=""><a href="/tangkas" name="Tangkas" title="Promosi tangkasnet">Tangkas</a></li>
+		<li id="tangkas" class=""><a href="/tangkas" name="Tangkas" title="Tangkas">Tangkas</a></li>
 	</ul>
 <div class="clearfix"></div>
 </div>
@@ -41,8 +41,7 @@
 	<div id="sidebar_box">
 		<div id="sidebar">
 			<ul>
-				<li class="current"><a href="/bantuan">Bantuan Bermain</a></li>
-				<li class="current"><a href="/tangkasnet">Tangkasnet</a></li>
+				<li class="current"><a href="/tangkas/tangkasnet">Tangkasnet</a></li>
 				<li class="current"><a href="/bantuan">Tangkasgold</a></li>
 				<li class="current"><a href="/bantuan">Tangkasroyal</a></li>
 				<li class="current"><a href="/bantuan">Tangkas88</a></li>
