--- a/tangkas/index.html
+++ b/tangkas/index.html
@@ -41,18 +41,18 @@
 	<div id="sidebar_box">
 		<div id="sidebar">
 			<ul>
-				<li class="current"><a href="/tangkas/tangkasnet">Tangkasnet</a></li>
-				<li class="current"><a href="/bantuan">Tangkasgold</a></li>
-				<li class="current"><a href="/bantuan">Tangkasroyal</a></li>
-				<li class="current"><a href="/bantuan">Tangkas88</a></li>
-				<li class="current"><a href="/bantuan">Tangkas365</a></li>
-				<li class="current"><a href="/bantuan">Tangkaspro</a></li>
-				<li class="current"><a href="/bantuan">Tangkascom</a></li>
-				<li class="current"><a href="/bantuan">Tangkas7</a></li>
-				<li class="current"><a href="/bantuan">Bola Tangkas</a></li>
-				<li class="current"><a href="/bantuan">Dewa Tangkas</a></li>
-				<li class="current"><a href="/bantuan">Naga Tangkas</a></li>
-				<li class="current"><a href="/bantuan">Agen Tangkas</a></li>
+				<li class="current"><a href="/tangkas">Tangkasnet</a></li>
+				<li class="current"><a href="/tangkas">Tangkasgold</a></li>
+				<li class="current"><a href="/tangkas">Tangkasroyal</a></li>
+				<li class="current"><a href="/tangkas">Tangkas88</a></li>
+				<li class="current"><a href="/tangkas">Tangkas365</a></li>
+				<li class="current"><a href="/tangkas">Tangkaspro</a></li>
+				<li class="current"><a href="/tangkas">Tangkascom</a></li>
+				<li class="current"><a href="/tangkas">Tangkas7</a></li>
+				<li class="current"><a href="/tangkas">Bola Tangkas</a></li>
+				<li class="current"><a href="/tangkas">Dewa Tangkas</a></li>
+				<li class="current"><a href="/tangkas">Naga Tangkas</a></li>
+				<li class="current"><a href="/tangkas">Agen Tangkas</a></li>
 				
 			</ul>
 		</div>
