--- a/tangkas/index.html
+++ b/tangkas/index.html
@@ -10,7 +10,7 @@
 
 
 
-<title>Bola Tangkas Online : Tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io/bantuan" />
+<title>Bola Tangkas Online : Tangkasnet</title><link rel="canonical" href="https://bolatangkasnet.github.io/tangkas" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
