--- a/tangkas/index.html
+++ b/tangkas/index.html
@@ -42,8 +42,8 @@
 		<div id="sidebar">
 			<ul>
 				<li class="current"><a href="/tangkas">Tangkasnet</a></li>
-				<li class="current"><a href="/tangkas">Tangkasgold</a></li>
-				<li class="current"><a href="/tangkas">Tangkasroyal</a></li>
+				<li class="current"><a href="/tangkasgold">Tangkasgold</a></li>
+				<li class="current"><a href="/tangkasroyal">Tangkasroyal</a></li>
 				<li class="current"><a href="/tangkas">Tangkas88</a></li>
 				<li class="current"><a href="/tangkas">Tangkas365</a></li>
 				<li class="current"><a href="/tangkas">Tangkaspro</a></li>
