--- a/tangkasnet/index.html
+++ b/tangkasnet/index.html
@@ -30,9 +30,9 @@
 <div id="nav">
 	<ul>
 		<li id="home" class=""><a href="/" name="Home" title="Tangkasnet">Home</a></li>
-		<li id="cara" class="current"><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
+		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
 		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
-		<li id="tangkas" class=""><a href="/tangkas" name="Tangkas" title="Tangkas">Tangkas</a></li>
+		<li id="tangkas" class="current"><a href="/tangkas" name="Tangkas" title="Tangkas">Tangkas</a></li>
 	</ul>
 <div class="clearfix"></div>
 </div>
@@ -41,7 +41,7 @@
 	<div id="sidebar_box">
 		<div id="sidebar">
 			<ul>
-				<li class="current"><a href="/tangkas">Tangkasnet</a></li>
+				<li class="current"><a href="/tangkasnet">Tangkasnet</a></li>
 				<li class="current"><a href="/tangkasgold">Tangkasgold</a></li>
 				<li class="current"><a href="/tangkasroyal">Tangkasroyal</a></li>
 				<li class="current"><a href="/tangkas">Tangkas88</a></li>
