--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<li id="home" class="current"><a href="/" name="Home" title="tangkasnet.net">Home</a></li>
 		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
 		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
-		<li id="tangkas" class=""><a href="/tangkas" name="Tangkas" title="Tangkas">Tangkas</a></li>
+		<li id="tangkas" class=""><a href="/tangkasnet" name="Tangkas" title="Tangkas">Tangkas</a></li>
 	</ul>
 <div class="clearfix"></div>
 </div>
