--- a/promosi/index.html
+++ b/promosi/index.html
@@ -27,7 +27,7 @@
 		<li id="home" class=""><a href="/" name="Home" title="tangkasnet">Home</a></li>
 		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
 		<li id="promosi" class="current"><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
-		<li id="tangkas" class=""><a href="/tangkas" name="Tangkas" title="Tangkas">Tangkas</a></li>
+		<li id="tangkas" class=""><a href="/tangkasnet" name="Tangkas" title="Tangkas">Tangkas</a></li>
 	</ul>
 <div class="clearfix"></div>
 </div>
