--- a/dewa-tangkas/index.html
+++ b/dewa-tangkas/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
@@ -62,11 +63,9 @@
 		<div id="content">
 						<div id="sub_content">
 				
-				<p>Rasakan serunya bermain di Tangkasgold</p>
+				<p>Rasakan serunya bermain di Dewa Tangkas</p>
 				<ul>
-					<li>Tangkasgold adalah permainan judi yang menggunakan sistem 7 kartu yang dikenal dengan sebutan bola tangkas dan menjadi sangat terkenal pada awal 1980an hampir disetiap kasino karena para pemain judi merasakan bahwa game bola tangkas ini sangat menantang dan sangat menarik karena banyak pemain judi yag bisa menang dan mendapatkan banyak barang dari setiap permainannya.
-
-					Permainan game bola tangkas ini memang tidak dapat dihindari oleh para pemain judi karena hampir setiap orang menyukai permainan yang mengandung unsur judi karena dapat memberikan kemenangan yang sangat banyak sekali secara tiba-tiba dan juga permainan bola tangkas ini memberikan hiburan tersendiri kepada setiap para pemain judi. Permainan judi online memang menjadi salah satu permainan yang dapat memberikan keuntungan yang besar untuk setiap para pemain judi. Para pemain judi tidak perlu bersusah payah untuk dapat memainkan permainan ini karena sekarang dengan kemajuan teknologi yang ada, kita dapat memainkan game bola tangkas tangkasgold tangkasnet tangkas asia secara online melalui komputer atau smartphone android.</li>
+					<li>Dewa tangkas adalah permainan judi online yang menggunakan sistem 7 kartu poker yang akan memberikan pengalaman yang seru bagi para pemainnya. Disini anda akan merasakan permainan bola tangkas online asia gratis yang paling menarik dengan sistem pertama dari kami yang mengunakan level up. Rasakan mudahnya bermain bola tangkas dan mendapatkan barang seperti ROYAL FLUSH, 5 OF KIND dan masih banyak hadiah menanti anda. Segera bergabung bersama kami di tangkas asia yang memberikan gratis coin. Kami selalu memberikan pelayanan terdepan di antara situs games bola tangkas online yang lain dan juga sebagai alternative tangkasnet, kamipun bisa di katakan memiliki predikat reputasi terbaik di seluruh asia. Tangkas adalah sebuah permainan poker style ala indonesia bola tangkas online yang digemari oleh kaum muda maupun komunitas yang sudah cukup veteran.</li>
 				</ul>
 			</div>
 					</div>
