--- a/tangkas88/index.html
+++ b/tangkas88/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
@@ -62,11 +63,14 @@
 		<div id="content">
 						<div id="sub_content">
 				
-				<p>Rasakan serunya bermain di Tangkasgold</p>
+				<p>Rasakan serunya bermain di Tangkas88</p>
 				<ul>
-					<li>Tangkasgold adalah permainan judi yang menggunakan sistem 7 kartu yang dikenal dengan sebutan bola tangkas dan menjadi sangat terkenal pada awal 1980an hampir disetiap kasino karena para pemain judi merasakan bahwa game bola tangkas ini sangat menantang dan sangat menarik karena banyak pemain judi yag bisa menang dan mendapatkan banyak barang dari setiap permainannya.
+					<li>Tangkas88 atau 88tangkas adalah nama lain dari tangkasnet dimana tangkasnet sendiri sudah dikenal oleh banyak para pemain judi dari segala kalangan. 88tangkas juga menjadi permainan yang sangat digemari oleh banyak pemain judi.
 
-					Permainan game bola tangkas ini memang tidak dapat dihindari oleh para pemain judi karena hampir setiap orang menyukai permainan yang mengandung unsur judi karena dapat memberikan kemenangan yang sangat banyak sekali secara tiba-tiba dan juga permainan bola tangkas ini memberikan hiburan tersendiri kepada setiap para pemain judi. Permainan judi online memang menjadi salah satu permainan yang dapat memberikan keuntungan yang besar untuk setiap para pemain judi. Para pemain judi tidak perlu bersusah payah untuk dapat memainkan permainan ini karena sekarang dengan kemajuan teknologi yang ada, kita dapat memainkan game bola tangkas tangkasgold tangkasnet tangkas asia secara online melalui komputer atau smartphone android.</li>
+
+					Tangkasnet adalah salah satu dari permainan game bola tangkas yang sangat terkenal pada tahun 1980an dikalangan para pemain judi dan penggemar bola tangkas. Pada waktu itu permainan ini sangat ramai dibicarakan oleh para pemain judi dan menjadi sangat populer karena para pemain judi berasa bahwa game bola tangkas ini sangat menarik untuk dimainkan karena dibutuhkan keahlian dan ketelitian dalam memainkan game bola tangkas ini yaitu dalam hal menghafalkan pola permainan game bola tangkas ini seperti memperhatikan step 1 sampai step 3.
+
+					Pada tahun 1995 , pemerintah melarang game bola tangkas ini untuk dipermainkan oleh para pemain judi. Sehingga bola tangkas online tangkasnet menjadi sulit untuk dimainkan oleh para pemain judi. Dengan kemajuan teknologi yang kita miliki sekarang , para pemain judi dan penggemar bola tangkas tidak perlu lagi mencari kasino atau tempat khusus untuk memainkan game bola tangkas ini. Permainan game bola tangkas sekarang dapat dimainkan secara online menggunakan internet melalui komputer atau handphone. Jika bermain di komputer kita harus download terlebih dahulu game bola tangkas online yang berupa aplikasi desktop dan ada juga yang bisa dimainkan secara langsung di browser komputer kita atau lebih dikenal dengan istilah web-based.</li>
 				</ul>
 			</div>
 					</div>
