--- a/tangkaspro/index.html
+++ b/tangkaspro/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head><meta name="msvalidate.01" content="C5A3A95CC30AE319778E4FE97C58746A" /><meta name="robots" content="index,follow" /><meta name="description" content="Bermain tangkas online di bola tangkas bolatangkas android tangkas asia, berbagai promo menarik termasuk klaim code promo untuk mendapatkan credit pemain baru. Segera daftar dan main!" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
@@ -62,11 +63,11 @@
 		<div id="content">
 						<div id="sub_content">
 				
-				<p>Rasakan serunya bermain di Tangkasgold</p>
+				<p>Rasakan serunya bermain di Tangkaspro</p>
 				<ul>
-					<li>Tangkasgold adalah permainan judi yang menggunakan sistem 7 kartu yang dikenal dengan sebutan bola tangkas dan menjadi sangat terkenal pada awal 1980an hampir disetiap kasino karena para pemain judi merasakan bahwa game bola tangkas ini sangat menantang dan sangat menarik karena banyak pemain judi yag bisa menang dan mendapatkan banyak barang dari setiap permainannya.
+					<li>Tangkaspro adalah permainan game bola tangkas yang sudah terkenal dikalangan pemain judi. Permainan game bola tangkas ini memakai kartu poker seperti sistem permainan poker akan tetapi cara bermainnya tidaklah sama dengan permainan poker. Permainan judi mickey mouse ini dimainkan dengan cara membuka 2 kartu pertama dan 5 kartu sisanya masih tertutup kemudian akan dibuka secara bertahap yang kemudian para pemain akan mendapatkan peluang untuk mendapatkan susunan kartu spesial seperti 4K , 5K , STR FLUSH dan ROYAL FLUSH.
 
-					Permainan game bola tangkas ini memang tidak dapat dihindari oleh para pemain judi karena hampir setiap orang menyukai permainan yang mengandung unsur judi karena dapat memberikan kemenangan yang sangat banyak sekali secara tiba-tiba dan juga permainan bola tangkas ini memberikan hiburan tersendiri kepada setiap para pemain judi. Permainan judi online memang menjadi salah satu permainan yang dapat memberikan keuntungan yang besar untuk setiap para pemain judi. Para pemain judi tidak perlu bersusah payah untuk dapat memainkan permainan ini karena sekarang dengan kemajuan teknologi yang ada, kita dapat memainkan game bola tangkas tangkasgold tangkasnet tangkas asia secara online melalui komputer atau smartphone android.</li>
+					Dengan kemajuan teknologi , kita dapat memainkan permainan judi mickey mouse ini secara online melalui media internet. Dengan perangkat komputer kita dapat memainkan permainan judi mickey mouse dengan cara memasang aplikasi desktop.</li>
 				</ul>
 			</div>
 					</div>
