--- a/tangkasroyal/index.html
+++ b/tangkasroyal/index.html
@@ -45,15 +45,15 @@
 				<li class="current"><a href="/tangkas">Tangkasnet</a></li>
 				<li class="current"><a href="/tangkasgold">Tangkasgold</a></li>
 				<li class="current"><a href="/tangkasroyal">Tangkasroyal</a></li>
-				<li class="current"><a href="/tangkas">Tangkas88</a></li>
-				<li class="current"><a href="/tangkas">Tangkas365</a></li>
-				<li class="current"><a href="/tangkas">Tangkaspro</a></li>
-				<li class="current"><a href="/tangkas">Tangkascom</a></li>
-				<li class="current"><a href="/tangkas">Tangkas7</a></li>
-				<li class="current"><a href="/tangkas">Bola Tangkas</a></li>
-				<li class="current"><a href="/tangkas">Dewa Tangkas</a></li>
-				<li class="current"><a href="/tangkas">Naga Tangkas</a></li>
-				<li class="current"><a href="/tangkas">Agen Tangkas</a></li>
+				<li class="current"><a href="/tangkas88">Tangkas88</a></li>
+				<li class="current"><a href="/tangkas365">Tangkas365</a></li>
+				<li class="current"><a href="/tangkaspro">Tangkaspro</a></li>
+				<li class="current"><a href="/tangkascom">Tangkascom</a></li>
+				<li class="current"><a href="/tangkas7">Tangkas7</a></li>
+				<li class="current"><a href="/bola-tangkas">Bola Tangkas</a></li>
+				<li class="current"><a href="/dewa-tangkas">Dewa Tangkas</a></li>
+				<li class="current"><a href="/naga-tangkas">Naga Tangkas</a></li>
+				<li class="current"><a href="/agen-tangkasnet">Agen Tangkasnet</a></li>
 				
 			</ul>
 		</div>
