--- a/tangkasroyal/index.html
+++ b/tangkasroyal/index.html
@@ -42,7 +42,7 @@
 	<div id="sidebar_box">
 		<div id="sidebar">
 			<ul>
-				<li class="current"><a href="/tangkas">Tangkasnet</a></li>
+				<li class="current"><a href="/tangkasnet">Tangkasnet</a></li>
 				<li class="current"><a href="/tangkasgold">Tangkasgold</a></li>
 				<li class="current"><a href="/tangkasroyal">Tangkasroyal</a></li>
 				<li class="current"><a href="/tangkas88">Tangkas88</a></li>
