--- a/tangkasroyal/index.html
+++ b/tangkasroyal/index.html
@@ -31,7 +31,7 @@
 <div id="nav">
 	<ul>
 		<li id="home" class=""><a href="/" name="Home" title="Tangkasnet">Home</a></li>
-		<li id="cara" class="current"><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
+		<li id="cara" class=""><a href="/bantuan" name="Cara" title="Cara Daftar tangkasnet">Bantuan</a></li>
 		<li id="promosi" class=""><a href="/promosi" name="Promosi" title="Promosi tangkasnet">Promosi</a></li>
 		<li id="tangkas" class="current"><a href="/tangkasnet" name="Tangkas" title="Tangkas">Tangkas</a></li>
 	</ul>
